kubernetes/base/noahhuppert-com/bases/server/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: noahhuppert-com
  labels:
    project: noahhuppert-com
    component: server
spec:
  selector:
    project: noahhuppert-com
    component: server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
