kubernetes/base/noahhuppert-com/bases/server/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: noahhuppert-com
  labels:
    project: noahhuppert-com
    component: server
  annotations:
    cert-manager.io/cluster-issuer: lets-encrypt-production-http01
spec:
  ingressClassName: nginx
  rules:
    - host: www.noahh.io
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: noahhuppert-com
              port:
                number: 80
    - host: noahh.io
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: noahhuppert-com
              port:
                number: 80
    - host: noahhuppert.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: noahhuppert-com
              port:
                number: 80
    - host: www.noahhuppert.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: noahhuppert-com
              port:
                number: 80
  tls:
    - hosts:
        - www.noahh.io
        - noahh.io
        - noahhuppert.com
        - www.noahhuppert.com
      secretName: noahhuppert-com-ingress-cert
